Add failing jest tests for Game and update to_json and from_json methods and tests

--- a/package.json
+++ b/package.json
@@ -5,15 +5,33 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-enzyme": "^7.0.2",
+    "jest-fetch-mock": "^2.1.2",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react_ujs": "^2.5.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
+  },
+  "jest": {
+    "setupFiles": [
+      "./setupJest.js"
+    ],
+    "roots": [
+      "spec/javascript"
+    ],
+    "moduleDirectories": [
+      "app/javascript",
+      "node_modules"
+    ]
   },
   "devDependencies": {
+    "fetch-mock": "^7.3.3",
     "jest": "^24.8.0",
     "webpack-dev-server": "^3.7.2"
   }
