--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jest-fetch-mock": "^2.1.2",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
+    "pusher-js": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react_ujs": "^2.5.0"
